--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,14 @@
         </activity>
         <activity android:name=".LeaderProfile">
         </activity>
+        <activity android:name=".LoginActivty">
+        </activity>
+        <activity android:name=".RegisterActivity">
+        </activity>
+
+        <meta-data
+                android:name = "preloaded_fonts"
+                android:resource = "@array/preloaded_fonts" />
     </application>
 
 </manifest>
