--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
