--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android = "http://schemas.android.com/apk/res/android"
     xmlns:tools = "http://schemas.android.com/tools"
-    package="com.emag.electlineleader">
+    package = "com.emag.electlineleader">
+
+    <uses-permission android:name = "android.permission.INTERNET" />
+    <uses-permission android:name = "android.permission.CAMERA" />
+    <uses-permission android:name = "android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
+        android:allowBackup = "true"
+        android:icon = "@mipmap/ic_launcher"
+        android:label = "@string/app_name"
+        android:roundIcon = "@mipmap/ic_launcher_round"
+        android:supportsRtl = "true"
+        android:theme = "@style/AppTheme"
         tools:ignore = "GoogleAppIndexingWarning">
-        <activity android:name=".LoginActivty">
+        <activity android:name = ".SplashScreen">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name = "android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name = "android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LeaderProfile"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        </activity>
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".RegisterActivity">
-        </activity>
+        <activity
+            android:name = ".LeaderProfile"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity android:name = ".MainActivity"/>
+        <activity
+            android:name = ".RegisterActivity"
+            android:theme = "@style/Theme.AppCompat.Light.NoActionBar"/>
 
         <meta-data
-                android:name = "preloaded_fonts"
-                android:resource = "@array/preloaded_fonts" />
+            android:name = "preloaded_fonts"
+            android:resource = "@array/preloaded_fonts" />
+
+        <activity android:name = ".LoginActivty"/>
     </application>
 
 </manifest>
